--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   equatable: ^2.0.5
   http: ^0.13.4
   shared_preferences: ^2.2.3
+  flutter_styled_toast: ^2.2.1
+  intl: ^0.18.1
+  dropdown_search: ^5.0.6
+  geolocator: ^11.1.0
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
