--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,7 @@ android {
    buildTypes {
        release {
            signingConfig signingConfigs.debug
+           crunchPngs false 
        }
    }
 
