--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\sakthi\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\sakthi\\flutter
-flutter.buildMode=release
+sdk.dir=/Users/ezeeinfo/Library/Android/sdk
+flutter.sdk=/Users/ezeeinfo/Development/flutter
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
