--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/ezeeinfo/Library/Android/sdk
-flutter.sdk=/Users/ezeeinfo/Development/flutter
-flutter.buildMode=debug
+sdk.dir=C:\\Users\\Sakthivel\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\Sakthivel\\flutter
+flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
